# powerflow-gnn

./: .gitignore  LICENSE  README.md  experiment_runs.csv  pyproject.toml  requirements.txt
data/: README.md  utils_data.py
data/prepare_data/: __init__.py  powergrid.py  synthetic_data.py  utils.py
data/raw/: README.md
scripts/: download_data.sh  evaluate_model.sh  preprocess_data.py  runs_sweep_physics.sh  train_HeGGA.sh  train_graphsage.sh  train_hegga_noattn.sh  train_hnn.sh  train_hnn_ablation.sh  train_pna.sh  train_transformer.sh  train_transformer_4_tasks.sh  train_transformer_physics.sh  train_transformer_vn.sh
src/: __init__.py  utils.py
src/config/: HeGGA_lappe.yaml  HeGGA_physics.yaml  default.yaml  graphsage.yaml  hegga_noattn_lappe.yaml  hh_mpnn_lappe.yaml  hh_mpnn_physics.yaml  hh_one_attention.yaml  physics_enhanced.yaml  pna.yaml  transformer_baseline.yaml  transformer_physics.yaml
src/experiments/: experiment_logger.py  run_experiment.py  run_sweep.py  sweep_config.yaml
src/losses/: README.md  __init__.py  physical_loss.py  regression_loss.py
src/models/: HeGGA.py  README.md  __init__.py  graphsage_pi.py  hegga_noattn.py  hh_mpnn.py  hhn_one_attention.py  layers.py  pna_pi.py  transformer_baseline.py  transformer_vn.py
src/training/: evaluate.py  physics_regularizer.py  train.py  utils_training.py
src/visualization/: plot_baseline_comparison.py  plot_ieee118_visual.py  plot_pareto_frontier.py  visualize_graphs.py  visualize_losses.py
tests/: conftest.py  test_data_loading.py  test_loss_terms.py  test_losses.py  test_model_forward.py  test_models.py  test_training_loop.py
