[project]
name = "powerflow-gnn"
version = "0.0.1"
description = "Learning to Solve Optimal Power Flow with Graph Neural Networks"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torch-geometric>=2.4",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "tqdm>=4.66",
    "pyyaml>=6.0"
]